continue setup architecture

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TrempelApp</string>
+    <string name="login">Login</string>
+    <string name="password">Password</string>
+    <string name="log_in_title">Login to your Account</string>
 </resources>
