--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="login">Login</string>
     <string name="password">Password</string>
     <string name="log_in_title">Login to your Account</string>
+    <string name="ok">OK</string>
 </resources>
