--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="password">Password</string>
     <string name="log_in_title">Login to your Account</string>
     <string name="ok">OK</string>
+    <string name="field_is_empty"></string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
