--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="what_are_you_looking_for">What are you looking for?</string>
     <string name="ready_for_the_shopping">Ready for the shopping?</string>
     <string name="visit_our_categories">Visit our Categories</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
