--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,12 @@
     <string name="what_are_you_looking_for">What are you looking for?</string>
     <string name="ready_for_the_shopping">Ready for the shopping?</string>
     <string name="visit_our_categories">Visit our Categories</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="all_products">ell products</string>
+    <string name="electronics">electronics</string>
+    <string name="womens_clothing">women\'s clothing</string>
+    <string name="mens_clothing">men\'s clothing</string>
+    <string name="jewelery">jewelery</string>
+    <string name="price">$%.2f</string>
+    <string name="categories">Categories</string>
 </resources>
