--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="ready_for_the_shopping">Ready for the shopping?</string>
     <string name="visit_our_categories">Visit our Categories</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="all_products">ell products</string>
+    <string name="all_products">all products</string>
     <string name="electronics">electronics</string>
     <string name="womens_clothing">women\'s clothing</string>
     <string name="mens_clothing">men\'s clothing</string>
