--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="categories">Categories</string>
     <string name="add_to_cart">Add to Cart</string>
     <string name="reviews_count">(%d reviews)</string>
+    <string name="undo_string">undo</string>
+    <string name="undo_deletion">Undo deletion!</string>
 </resources>
