--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="username">Username</string>
     <string name="phone">Phone number</string>
     <string name="address">Address</string>
+    <string name="on_image_saved">Your image have been saved</string>
 </resources>
